// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`3rd Party Bridges should match snapshot when network is BNB Mainnet 1`] = `
<DocumentFragment>
  <div
    class="sc-bmzYkS ihMHSD"
  >
    <p
      class="sc-imWYAI dZiXLh sc-bXCLTC fHhPdD"
    >
      Third party bridges
    </p>
    <div
      class="sc-iHGNWf beXtmb"
    >
      <p
        class="sc-imWYAI hMxxJk"
      >
        No bridges available
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`3rd Party Bridges should match snapshot when network is ETH Mainnet 1`] = `
<DocumentFragment>
  <div
    class="sc-bmzYkS ihMHSD"
  >
    <p
      class="sc-imWYAI dZiXLh sc-bXCLTC fHhPdD"
    >
      Third party bridges
    </p>
    <div
      class="sc-iHGNWf gspyyn"
    >
      <a
        class="sc-jsJBEP TReYa"
        data-testid="bridge-item"
        href="https://boba.banxa.com/"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          class="sc-eeDRCY bhtPGt"
        >
          <img
            alt="Banxa logo"
            height="32px"
            src="https://raw.githubusercontent.com/bobanetwork/gateway-data/main/bridges/icons/banxa.svg"
            width="32px"
          />
        </div>
        <p
          class="sc-imWYAI cVkDut sc-koXPp bysAXE"
        >
          Banxa
        </p>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`3rd Party Bridges should match snapshot when network is TESTNET 1`] = `<DocumentFragment />`;
